Removing depreacted API use